--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.5",
-    "simplelightbox": "^2.10.4"
+    "simplelightbox": "^2.10.4",
+    "throttle-debounce": "^5.0.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
